[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-dqn"
version = "1.0.0"
description = "Deep Q-Network implementation for cryptocurrency trading with enterprise patterns"
readme = "README.md"
license = {text = "MIT"}
authors = [
 {name = "ML Development Team", email = "dev@example.com"}
]
classifiers = [
 "Development Status :: 4 - Beta",
 "Intended Audience :: Financial and Insurance Industry",
 "License :: OSI Approved :: MIT License",
 "Programming Language :: Python :: 3",
 "Programming Language :: Python :: 3.10",
 "Programming Language :: Python :: 3.11",
 "Topic :: Office/Business :: Financial :: Investment",
 "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.10"

[tool.black]
line-length = 120
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
 # directories
 \.eggs
 | \.git
 | \.hg
 | \.mypy_cache
 | \.tox
 | \.venv
 | build
 | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
 "gym.*",
 "matplotlib.*",
 "seaborn.*",
 "ccxt.*",
 "ta.*",
 "wandb.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
 "tests",
]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
markers = [
 "slow: marks tests as slow (deselect with '-m \"not slow\"')",
 "integration: marks tests as integration tests",
 "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
 "*/tests/*",
 "*/test_*",
 "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
 "pragma: no cover",
 "def __repr__",
 "raise AssertionError",
 "raise NotImplementedError",
 "if __name__ == .__main__.:"
]