[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-ppo"
version = "1.0.0"
description = "Proximal Policy Optimization (PPO) system for crypto trading with "
authors = [{name = "ML Team", email = "dev@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ppo", "reinforcement-learning", "actor-critic", "crypto-trading", "policy-gradient"]

dependencies = [
 # Core ML/RL dependencies
 "torch>=2.0.0",
 "torchvision>=0.15.0",
 "torch-audio>=2.0.0",
 "numpy>=1.24.0",
 "scipy>=1.10.0",
 "pandas>=2.0.0",
 "scikit-learn>=1.3.0",
 
 # RL and PPO specific
 "gymnasium>=0.28.0",
 "stable-baselines3>=2.0.0",
 "tensorboard>=2.13.0",
 "wandb>=0.15.0",
 "ray[rllib]>=2.7.0",
 
 # Visualization and monitoring
 "matplotlib>=3.7.0",
 "seaborn>=0.12.0",
 "plotly>=5.15.0",
 
 # Data and performance
 "numba>=0.57.0",
 "cython>=3.0.0",
 "psutil>=5.9.0",
 "memory-profiler>=0.60.0",
 
 # Async and distributed
 "pydantic>=2.0.0",
 "fastapi>=0.100.0",
 "uvicorn>=0.23.0",
 "redis>=4.6.0",
 "asyncio-mqtt>=0.13.0",
 "celery>=5.3.0",
 
 # Utilities
 "dataclasses-json>=0.5.0",
 "typing-extensions>=4.7.0",
 "omegaconf>=2.3.0",
 "hydra-core>=1.3.0",
 "jsonschema>=4.19.0"
]

[project.optional-dependencies]
dev = [
 "pytest>=7.4.0",
 "pytest-asyncio>=0.21.0",
 "pytest-cov>=4.1.0",
 "pytest-benchmark>=4.0.0",
 "pytest-xdist>=3.3.0",
 "black>=23.7.0",
 "flake8>=6.0.0",
 "mypy>=1.5.0",
 "isort>=5.12.0",
 "pre-commit>=3.3.0"
]

performance = [
 "cuda-python>=12.0.0",
 "cupy>=12.0.0",
 "tensorrt>=8.6.0"
]

monitoring = [
 "prometheus-client>=0.17.0",
 "grafana-api>=1.0.0",
 "mlflow>=2.6.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
 "pragma: no cover",
 "def __repr__",
 "if self.debug:",
 "if settings.DEBUG",
 "raise AssertionError",
 "raise NotImplementedError",
 "if 0:",
 "if __name__ == .__main__.:",
]