[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-automl-pipeline"
version = "1.0.0"
description = "Enterprise AutoML Pipeline for Crypto Trading Bot v5.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "ML Team", email = "team@example.com"}
]
keywords = ["automl", "crypto", "trading", "machine-learning", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"

dependencies = [
    # Core ML & AutoML
    "scikit-learn>=1.3.0",
    "optuna>=3.4.0",
    "hyperopt>=0.2.7",
    "scikit-optimize>=0.9.0",
    "auto-sklearn>=0.15.0",
    "flaml>=2.1.0",
    
    # Deep Learning
    "torch>=2.1.0",
    "pytorch-lightning>=2.1.0",
    "transformers>=4.35.0",
    "torchmetrics>=1.2.0",
    
    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "polars>=0.19.0",
    "pyarrow>=14.0.0",
    "dask>=2023.10.0",
    
    # Feature Engineering
    "feature-engine>=1.6.0",
    "category-encoders>=2.6.0",
    "tsfresh>=0.20.0",
    "featuretools>=1.28.0",
    
    # Time Series
    "statsmodels>=0.14.0",
    "pmdarima>=2.0.4",
    "sktime>=0.24.0",
    "tslearn>=0.6.0",
    
    # Crypto & Finance
    "ta>=0.10.2",
    "yfinance>=0.2.0",
    "pandas-ta>=0.3.14b",
    "quantlib>=1.31",
    
    # Visualization & Monitoring
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "wandb>=0.16.0",
    "mlflow>=2.8.0",
    
    # Utilities
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "rich>=13.6.0",
    "typer>=0.9.0",
    "joblib>=1.3.0",
    "tqdm>=4.66.0",
    
    # Performance
    "numba>=0.58.0",
    "cupy-cuda12x>=12.2.0; platform_machine=='x86_64'",
    
    # Testing & Quality
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "pre-commit>=3.4.0",
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.61.0",
]

gpu = [
    "torch[cuda]>=2.1.0",
    "cuml-cu12>=23.10.0",
    "cudf-cu12>=23.10.0",
]

[project.urls]
"Homepage" = "https://github.com/your-org/crypto-trading-bot-v5"
"Bug Reports" = "https://github.com/your-org/crypto-trading-bot-v5/issues"
"Source" = "https://github.com/your-org/crypto-trading-bot-v5/tree/main/packages/ml-automl-pipeline"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.toml"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]