[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-fear-greed-index"
version = "1.0.0"
description = "Multi-source Fear & Greed Index with social sentiment, volatility, and market momentum signals"
authors = [{name = "KeepALife"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["crypto", "fear-greed-index", "ml", "trading", "sentiment-analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "numpy>=1.25.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.14.0",
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "redis>=4.6.0",
    "psycopg[binary]>=3.1.0",
    "asyncpg>=0.29.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "plotly>=5.17.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "celery>=5.3.0",
    "schedule>=1.2.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "circuit-breaker>=1.1.0",
    "yfinance>=0.2.24",
    "ccxt>=4.1.0",
    "pytrends>=4.9.0",
    "tweepy>=4.14.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-telegram-bot>=20.7.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "timescale-vector>=0.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=6.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.27.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true